...
                  """ adipiscing elit. Nam egestas rhoncus lectus rhoncus, tempor. """,
                  textAlign: TextAlign.center,
                  style: Theme.of(context).textTheme.bodyText2,
                ),
                const SizedBox(height: 30.0),
                ElevatedButton(
                  key: const Key('sign_in'),
                  style: ElevatedButton.styleFrom(
                    minimumSize: const Size(double.infinity, 40),
                  ),
                  onPressed: () => context.push('/sign-in'),
                  child: Text(
                    "SIGN IN",
                    style: Theme.of(context).primaryTextTheme.button,
                  ),
                ),
                const SizedBox(height: 19.0),
                ElevatedButton(
                  key: const Key('create_account'),
                  style: ElevatedButton.styleFrom(
                    minimumSize: const Size(double.infinity, 40),
                  ),
                  onPressed: () => context.push('/register'),
                  child: Text(
                    "CREATE AN ACCOUNT",
...
