class Constants {
  static const home = "Home";
  static const myQuestions = "My Questions";
  static const profile = "Profile";
  static const create = "Create";
  static const changePassword = "Change Password";
}
